# swc-plugin-transform-cjs-imports

./: Cargo.toml  README.md  package.json
src/: lib.rs
tests/: test.rs
tests/fixture/1/: input.js  output.js
tests/fixture/2/: input.js  output.js
tests/fixture/3/: input.js  output.js
tests/fixture/4/: input.js  output.js
tests/fixture/5/: input.js  output.js
tests/fixture/8/: input.js  output.js
tests/fixture/9/: input.js  output.js
