[package]
name = "swc_plugin_transform_cjs_imports"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
serde_json = "1.0.99"
swc_common = "0.31.16"
swc_core = { version = "0.78.*", features = ["ecma_plugin_transform"] }
swc_ecma_ast = "0.106.6"
swc_ecma_codegen = "0.141.11"
swc_ecma_parser = "0.136.8"
swc_ecma_transforms_macros = "0.5.2"
swc_ecma_transforms_testing = "0.132.14"
swc_ecma_visit = "0.92.5"

[dev-dependencies]
testing = "0.33.19"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
